crates/viewer_support/re_dataframe_ui/tests/integration/snapshots/integration__filter_tests__float_all_types@Float64Type.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/integration/filter_tests.rs
expression: test_results
---
TestResult {
    filter: Float(
        FloatFilter {
            operator: Eq,
            rhs_value: Some(
                3.0,
            ),
        },
    ),
    field: Field {
        name: "column",
        data_type: Float64,
    },
    unfiltered: PrimitiveArray<Float64>
    [
      1.0,
      2.0,
      3.0,
      4.0,
      5.0,
    ],
    filtered: PrimitiveArray<Float64>
    [
      3.0,
    ],
}
